add second task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,7 @@ body {
   }
 
   @for $day from 28 to 31 {
-    &--month-#{$day} &__item:nth-child(n + #{$day + 1}) {
+    &--month-#{$day} &__day:nth-child(n + #{$day + 1}) {
       display: none;
     }
   }
