separate styles, animation fix, delete comment, margin to main block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,74 +1,5 @@
-$row-width: 100px;
-$gap: 1px;
-$days: (
-  "mon": 0,
-  "tue": 1,
-  "wed": 2,
-  "thu": 3,
-  "fri": 4,
-  "sat": 5,
-  "sun": 6,
-);
-
-@function calendarWidth($boxWidth, $gap) {
-  @return (($boxWidth * 7) + ($gap * 6));
-}
-
-@mixin boxSize($value) {
-  height: #{$value};
-  width: #{$value};
-}
-
-body {
-  margin: 0;
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  gap: $gap;
-  padding: 10px;
-  width: calendarWidth($row-width, $gap);
-
-  @each $day, $pos in $days {
-    &--start-day-#{$day} :first-child {
-      margin-left: ($row-width + $gap) * $pos;
-    }
-  }
-
-  @for $i from 28 through 31 {
-    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
-      display: none;
-    }
-  }
-
-  &__day {
-    // position: relative;
-    display: flex;
-    box-sizing: border-box;
-    border: 1px solid black;
-    @include boxSize($row-width);
-
-    transition: 500ms;
-
-    &:hover {
-      background-color: purple;
-      color: wheat;
-
-      transform: translateY(-20px);
-    }
-
-    &::before {
-      margin: auto;
-
-      font-size: 30px;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    @for $day from 1 through 31 {
-      &:nth-child(#{$day})::before {
-        content: "#{$day}";
-      }
-    }
-  }
-}
+@import "./vars";
+@import "./funcs";
+@import "./mixins";
+@import "./normalize";
+@import "./blocks/calendar";
