--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,14 +8,10 @@ body {
 }
 
 html {
-  @for $dayNumber from 1 through 31 {
-    &:nth-child(#{$dayNumber}):before {
-      content: "#{$dayNumber}";
-      font-size: 30px;
-      font-family: "Arial", sans-serif;
-    }
+  .calendar__day:before {
+    font-size: 30px; /* Poprawa rozmiaru czcionki dla dni */
+    font-family: "Arial", sans-serif;
   }
-
 }
 
 .calendar {
@@ -39,17 +35,11 @@ html {
     box-sizing: border-box;
     cursor: pointer;
     transition: 0.5s;
+  }
 
-    @for $dayNumber from 1 through 31 {
-      &:nth-child(#{$dayNumber}):before {
-        content: "#{$dayNumber}";
-      }
-    }
-
-    &:hover {
-      background-color: pink;
-      transform: translateY(-20px);
-    }
+  &:hover .calendar__day { /* Poprawa efektu hover dla wszystkich dni */
+    background-color: pink;
+    transform: translateY(-20px);
   }
 
   @each $length in $monthLengths {
