--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -14,7 +14,7 @@
     font-size: $font-size;
     background-color: #eee;
     cursor: pointer;
-    transition: background-color $animation-duration;
+    transition: background-color, $animation-duration;
 
     &:hover {
       cursor: pointer;
