--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
 @import "./blocks/normalize.scss";
-@import "./utils/mod.scss";
+@import "./utils/calendar-modification.scss";
 @import "./blocks/calendar.scss";
