--- a/src/styles/utils/calendar-modification.scss
+++ b/src/styles/utils/calendar-modification.scss
@@ -8,12 +8,12 @@
   .calendar--start-day-#{$day} {
     .calendar__day:first-child {
       margin-left: if($day == mon, 0,
-      if($day == tue, $cell-size + ($border-width * 1),
-      if($day == wed, ($cell-size * 2) + ($border-width * 2),
-      if($day == thu, ($cell-size * 3) + ($border-width * 3),
-      if($day == fri, ($cell-size * 4) + ($border-width * 4),
-      if($day == sat, $cell-size * 5 + ($border-width * 5),
-      $cell-size * 6 + ($border-width * 6)))))));
+      if($day == tue, $cell-size + 1,
+      if($day == wed, ($cell-size * 2) + 2,
+      if($day == thu, ($cell-size * 3) + 3,
+      if($day == fri, ($cell-size * 4) + 4,
+      if($day == sat, ($cell-size * 5) + 5,
+      $cell-size * 6 + 6))))));
     }
   }
 }
