--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,7 +58,7 @@ body {
     }
 
     @each $day in $start-day {
-      &__cell--start-day--#{$day} {
+      &__cells--start-day--#{$day} {
         margin-left: index($start-day, $day) * ($cell-size + $cell-gap);
       }
     }
