--- a/src/styles/inits/variables.scss
+++ b/src/styles/inits/variables.scss
@@ -1,5 +1,6 @@
 $card-color: #eee;
 $card-size: 100px;
+$padding-cal: 10px;
 $gap-size: 1px;
 $week-width: calc(7 * #{$card-size} + 6 * #{$gap-size});
 
