--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,6 +1,7 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
+  margin: 0 auto;
   width: $cellSize * 7 + $padding * 2 + $gap * 6;
   gap: $gap;
   padding: $padding;
@@ -17,13 +18,12 @@
   }
 
   &__day::before {
-    font-family: Arial;
     font-size: 30px;
   }
 
   @for $i from 1 through 31 {
     &__day:nth-child(#{$i})::before {
-      content: '#{$i}';
+      content: "#{$i}";
     }
   }
 
@@ -40,11 +40,18 @@
   }
 }
 
-$days: ('mon': 0, 'tue': 1, 'wed': 2, 'thu': 3, 'fri': 4, 'sat': 5, 'sun': 6);
+$days: (
+  "mon": 0,
+  "tue": 1,
+  "wed": 2,
+  "thu": 3,
+  "fri": 4,
+  "sat": 5,
+  "sun": 6,
+  );
 
 @each $day, $order in $days {
-    .calendar--start-day--#{$day} .calendar__day:first-child {
-      margin-left: ($cellSize + $gap) * $order;
-    }
+  .calendar--start-day--#{$day} .calendar__day:first-child {
+    margin-left: ($cellSize + $gap) * $order;
   }
-  
+}
