add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,13 +47,13 @@ body {
 }
 
 @each $weekday, $column-px in $weekdays {
-  .calendar__day--start-day_#{$weekday} {
+  .calendar__day--start-day-#{$weekday} {
     margin-left: 0;
   }
 }
 
 @for $day from 28 to 31 {
-  &--month-#{$day} &__item:nth-child(n + #{$day + 1}) {
+  &--month-length-#{$day} &__item:nth-child(n + #{$day + 1}) {
     display: none;
     justify-content: center;
   }
