--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,61 +1,80 @@
-@import "inits/variables.scss";
+@import "./inits/variables.scss";
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
 }
 
+.main {
+  display: flex;
+  height: 100vh;
+
+  min-width: $calendar-width;
+
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+
 .calendar {
   display: flex;
-  width: $week-width;
-  gap: $gap-size;
-  margin: 20px auto 0;
+  width: $calendar-width;
+  padding: $calendar-paddings;
+  gap: $calendar-gap;
   flex-wrap: wrap;
+  flex-shrink: 0;
+  align-content: center;
 
-  &__day {
-    box-sizing: border-box;
-    background-color: $card-color;
-    width: $card-size;
-    height: $card-size;
-    border: 1px solid black;
-
-    &:hover {
-      animation: move 0.5s forwards;
-      cursor: pointer;
-      background-color: pink;
+  @each $key, $value in $day-of-week {
+    &--start-day-#{$key} {
+      .calendar__day:first-child {
+        margin-left: #{$value};
+      }
     }
   }
-}
 
-.calendar--start-day-sun .calendar__day:first-child {
-  margin-left: 606px;
-}
-
-@for $i from 1 through 31 {
-  .calendar__day:nth-child(#{$i})::before {
-    content: "#{$i}";
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
+  &__day {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: $card-size;
-  }
-}
+    height: $day-height;
+    width: $day-width;
+    flex-shrink: 0;
+    background-color: $day-bg-color;
 
-@each $weekday, $column-px in $weekdays {
-  .calendar__day--start-day-#{$weekday} {
-    margin-left: 0;
-  }
-}
+    font-size: $day-font-size;
 
-@for $day from 28 to 31 {
-  &--month-length-#{$day} &__item:nth-child(n + #{$day + 1}) {
-    display: none;
-  }
-}
+    border: $day-border-width solid $day-border-color;
 
-@keyframes move {
-  100% {
-    transform: translateY(-20px);
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: "#{$day}";
+        line-height: $day-height;
+        width: $day-width;
+        text-align: center;
+      }
+    }
+
+    transition-property: color, transform;
+    transition-duration: 0.5s;
+
+    &:hover {
+      background-color: $day-hovered-color;
+      transform: translateY(-$day-hovered-shift);
+      cursor: pointer;
+    }
+  }
+
+  @for $month-end from 28 through 31 {
+    &--month-length-#{$month-end} {
+      .calendar__day:nth-child(n + #{$month-end + 1}) {
+        display: none;
+      }
+    }
   }
 }
