--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,13 +1,13 @@
 .calendar {
   display: flex;
-  max-width: 730px;
+  max-width: $max-width;
   padding: 10px;
   flex-wrap: wrap;
-  gap: 1px;
+  gap: $calendar-gap;
   margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
 
-  @each $day-name, $day in mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6 {
+  @each $day-name, $day in $weekdays {
     &--start-day--#{$day-name} {
       .calendar__day:nth-child(1) {
         margin-left: 100px * $day + $day;
@@ -17,35 +17,34 @@
 
   @for $day from 1 to 31 {
     &--days-#{$day} {
-      .calendar__day:nth-child(n + #{$day + 1}) {
+      &__day:nth-child(n + #{$day + 1}) {
         display: none;
       }
     }
   }
 
   &__day {
-    height: 100px;
-    width: 100px;
+    height: $height-day;
+    width: $width-day;
     background-color: #eee;
     border: 1px solid black;
     display: flex;
     font-size: 30px;
+    box-sizing: border-box;
     align-items: center;
     justify-content: center;
-    transition: transform 500ms;
+    transition: transform 500ms, background-color 500ms;
   }
 
   &__day:hover {
     cursor: pointer;
     transform: translateY(-20px);
     background-color: palevioletred;
-    animation-duration: 500ms;
   }
 
   @for $date from 1 through 31 {
     &__day:nth-child(#{$date})::before {
       content: "#{$date}";
-      display: block;
     }
   }
 }
