--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,7 +48,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: $gap-size;
-  flex-grow: 2;
   width: $calendar-size;
   margin: 0 auto;
 }
@@ -58,11 +57,10 @@ body {
   width: $day-size;
   height: $day-size;
   border: solid 1px black;
-  padding: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 0.5s;
+  transition: transform 0.5s;
 
   &:hover {
     background-color: pink;
