--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,5 +1,4 @@
 $day-square: 100px;
 $day-padding: 10px;
-$days-of-week: "Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun";
-$number-of-days: 29;
-$start-day: "Sat";
+$days-of-week: ("mon":0, "tue":1, "wed":2, "thu":3, "fri":4, "sat":5, "sun":6);
+$month-length: 29;
