--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  max-width: ($cell-size * 7) + 10px;
+  max-width: ($cell-size * $columncount) + $pading;
 
   &__day {
     display: flex;
@@ -17,7 +17,6 @@
     transition: background-color, $animation-duration;
 
     &:hover {
-      cursor: pointer;
       background-color: $hover-color;
       transform: translate(0, -20px);
     }
