--- a/src/styles/blocks/normalize.scss
+++ b/src/styles/blocks/normalize.scss
@@ -1,10 +1,14 @@
 $cell-size: 100px;
 $border-width: 1px;
 $font-size: 30px;
-$hover-color: #ff69b4;
+$hover-color: pink;
 $animation-duration: 0.5s;
+$daysStart : (mon, tue, wed, thu, fri, sat, sun);
+$columncount : 7;
+$pading : 10px;
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
