--- a/src/styles/blocks/normalize.scss
+++ b/src/styles/blocks/normalize.scss
@@ -3,7 +3,7 @@ $border-width: 1px;
 $font-size: 30px;
 $hover-color: pink;
 $animation-duration: 0.5s;
-$daysStart : (mon, tue, wed, thu, fri, sat, sun);
+$daysStart : (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5 , sun 6);
 $columncount : 7;
 $pading : 10px;
 
