--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -20,5 +20,26 @@
       background-color: $hover-color;
       transform: translate(0, -20px);
     }
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: "#{$day}";
+      }
+    }
+
+  }
+
+  @for $length from 28 through 31 {
+    &--length--#{$length} {
+      .calendar__day:nth-child(n+#{$length + 1}) {
+        display: none;
+      }
+    }
+  }
+
+  @each $day , $num in $daysStart {
+    &--start--#{$day} :first-child {
+      margin-left: ($cell-size * $num) + $num;
+    }
   }
 }
