added modifiers, deleted classes

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,6 +3,16 @@ $border: 1px solid black;
 $gap: 1px;
 $padding: 10px;
 $columns: 7;
-$calendarWidth: ($daySize * $columns) + ($gap * ($columns - 1)) + ($padding * 2);
+$calendarWidth: ($daySize * 7) + ($gap) + (10 * 2);
 $background-color: #eee;
 $animation-duration: 0.5s;
+$border-width: 1px;
+$dayOrder: (
+  mon: 7,
+  tue: 6,
+  wed: 5,
+  thu: 4,
+  fri: 3,
+  sat: 2,
+  sun: 1,
+);
