--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,16 +1,7 @@
-@import './utils/variables.scss';
-
-$daySize: 100px;
-$border: 1px solid black;
-$gap: 1px;
-$padding: 10px;
-$columns: 7;
-$calendarWidth: ($daySize * $columns) + ($gap * ($columns - 1)) + ($padding * 2);
-$background-color: #eee;
-$animation-duration: 0.5s;
+@import "./utils/variables.scss";
 
 html {
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 30px;
 }
 
@@ -18,60 +9,61 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
   width: $calendarWidth;
-  padding: $padding;
-}
+  padding: 40px $padding;
 
-.calendar__day {
-  height: $daySize;
-  width: $daySize;
-  border: $border;
-  background-color: $background-color;
-  text-align: center;
-  line-height: $daySize;
-  position: relative;
-  margin-right: $gap;
-  margin-bottom: $gap;
-}
+  &__day {
+    height: $daySize;
+    width: $daySize;
+    border: $border;
+    background-color: $background-color;
+    position: relative;
+    margin-right: $gap;
+    margin-bottom: $gap;
+    transition-duration: 0.5s;
+  }
 
-.calendar__day:nth-child(1) {
-  margin-left: 618px;
-}
+  &__day::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-.calendar__day::before {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  &__day:hover {
+    background-color: pink;
+    cursor: pointer;
+    transform: translateY(-20px);
+  }
 }
 
 @for $i from 1 through 31 {
   .calendar__day:nth-child(#{$i})::before {
-    content: '#{$i}';
+    content: "#{$i}";
   }
 }
 
-@each $day in mon, tue, wed, thu, fri, sat, sun {
-  .start-day-#{$day} .calendar__day-#{$day} {
-    margin-left: 0;
+@each $start-day in  mon, tue, wed, thu, fri, sat, sun {
+  .calendar__start-day--#{$start-day} {
+    @for $i from 1 through 7 {
+      $margin-left: (($daySize + $gap + ($border-width * 2))
+      * ($i - map-get($dayOrder, #{$start-day}))) ;
+      .calendar__day:nth-child(1) {
+        margin-left: calc(#{$margin-left});
+      }
+    }
   }
 }
 
-@for $i from 28 through 31 {
-  .month-length-#{$i} .calendar__day:nth-child(n+#{$i}) {
-    display: none;
+@for $month-length from 28 through 31 {
+  .calendar__month-length--#{$month-length} {
+    .calendar__day:nth-child(n+#{$month-length + 1}) {
+      display: none;
+    }
   }
-}
-
-.calendar__day:hover {
-  background-color: pink;
-  cursor: pointer;
-  transform: translateY(-20px);
-  transition: $animation-duration;
 }
