--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,8 @@
 }
 
 body {
+  display: flex;
+  justify-content: center;
   margin: 0;
   background-color: grey;
   font-family: Arial, Helvetica, sans-serif;
