--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,7 +48,7 @@ body {
   }
 }
 
-@each $start-day in  mon, tue, wed, thu, fri, sat, sun {
+@each $start-day in $days {
   .calendar__start-day--#{$start-day} {
     @for $i from 1 through 7 {
       $margin-left: (($daySize + $gap + ($border-width * 2))
