--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -7,6 +7,9 @@ $calendarWidth: ($daySize * 7) + ($gap) + (10 * 2);
 $background-color: #eee;
 $animation-duration: 0.5s;
 $border-width: 1px;
+$days: (
+  mon, tue, wed, thu, fri, sat, sun
+);
 $dayOrder: (
   mon: 7,
   tue: 6,
