centered calendar vertically

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,19 +3,22 @@
 html {
   font-family: "Arial", sans-serif;
   font-size: 30px;
+  height: 100%;
 }
 
 body {
   margin: 0;
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
   width: $calendarWidth;
-  padding: 40px $padding;
+  padding: $padding;
 
   &__day {
     height: $daySize;
