sunday bug fixed

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -15,14 +15,12 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  width: $cell-size * 7;
+  width: $cell-size * 7 + 6 * $pixel;
   margin: 0 auto;
   padding: $cell-padding;
   gap: $pixel;
 
   &__day {
-    height: $cell-size;
-    width: $cell-size;
     @include calendar-cell;
     transition: transform 0.5s ease-in-out;
 
