--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,52 +1,2 @@
-// body {
-//   margin: 0;
-// }
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1px;
-  width: 706px;
-  padding: 10px;
-
-  $dayWeeks: (0 0, 1 101px, 2 202px, 3 303px, 4 404px, 5 505px, 6 606px);
-
-  @each $day, $value in $dayWeeks {
-    &--#{$day} &__day:first-child {
-      margin-left: #{$value};
-    }
-  }
-
-  @for $days from 28 through 31 {
-    &--#{$days} &__day:nth-child(n+#{$days+1}) {
-      display: none;
-    }
-  }
-
-  &__day {
-    box-sizing: border-box;
-    height: 100px;
-    width: 100px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    background-color: #eee;
-    border: 1px solid #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.5s;
-
-    &:hover {
-      transform: translate(0, -20px);
-      background-color: pink;
-      cursor: pointer;
-
-    }
-
-    @for $i from 1 through 31 {
-      &:nth-child(#{$i})::before {
-        content: "#{$i}";
-      }
-    }
-  }
-}
+@import "./variables.scss";
+@import "./style.scss";
