--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,56 @@
-body {
-  margin: 0;
+@import "variables";
+@import "page";
+
+* {
+  box-sizing: border-box;
+}
+
+.calendar {
+  display: flex;
+  width: 706px;
+  flex-wrap: wrap;
+  height: min-content;
+  gap: 1px;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $day_size;
+    height: $day_size;
+    background-color: $day_background;
+    border: 1px solid $border-color;
+    transition: all 0.5s;
+
+    &:hover {
+      background-color: $background_pink;
+      cursor: pointer;
+      transform: translateY(-20px);
+      transition: all 0.5s;
+    }
+  }
+}
+
+@each $day, $margin in $first_day {
+  .calendar--first-day-#{$day} {
+    > .calendar__day:first-child {
+      margin-left: $margin;
+      counter-reset: day-counter;
+    }
+
+    > .calendar__day::before {
+      content: counter(day-counter);
+      counter-increment: day-counter;
+    }
+  }
+}
+
+@for $i from 28 through 31 {
+  .calendar--month-length-#{$i} {
+    > div {
+      &:nth-child(n + #{$i + 1}) {
+        display: none;
+      }
+    }
+  }
 }
