fix task calendar

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -5,6 +5,6 @@
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 30px;
 }
