--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,62 @@
+$date_size: 100px;
+/*$row: 5;
+$colamn: 7;*/
+$calendar-width: 710px;
+$start-day: 606px;
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: $calendar-width;
+  margin: auto;
+
+  &__date {
+    display: flex;
+    position: relative;
+    height: $date_size;
+    width: $date_size;
+    border: 1px solid #000;
+    background-color: #eee;
+    margin: 0.5px;
+    align-items: center;
+    justify-content: center;
+
+    @for $i from 1 through 29 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+        text-align: center;
+        justify-content: center;
+
+        position: absolute;
+      }
+    }
+
+    $days: mon, tue, wed, thu, fri, sat, sun;
+    @each $day in $days {
+      &--start--#{$day} {
+        content: $days;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+      transition: transform 500ms;
+    }
+
+    &--start--day {
+      margin-left: $start-day;
+    }
+  }
 }
