Content was centered

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.centered {
+  position: absolute;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+}
+
 .calendar {
   display: flex;
   flex-wrap: wrap;
