--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,11 +19,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.centered {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+.page {
+  width: 100%;
+  height: 100%;
 }
 
 .calendar {
@@ -31,6 +29,8 @@ body {
   flex-wrap: wrap;
   gap: 1px;
   width: $widthOfCalendar;
+  margin: auto;
+  align-items: center;
   padding: 10px;
 
   &__day {
