--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,6 +4,10 @@
 
 .page {
   &__body {
+    display: flex;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: $dayFontSize;
   }
