--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,4 @@ $border-width: 1px;
 $cell-gap: 1px;
 $font-size: 30px;
 $animation-duration: 0.5s;
+$days: (mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7);
