--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,12 @@ $animationDuration: 0.5s;
 $days: ("mon": 1, "tue": 2, "wed": 3, "thu": 4, "fri": 5, "sat": 6, "sun": 7);
 
 body {
+  margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: $dayFontSize;
+  height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .calendar {
