--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,13 @@
+@import "utils/variables.scss";
+@import "blocks/calendar.scss";
+@import "blocks/day.scss";
+
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
 }
