--- a/src/styles/blocks/day.scss
+++ b/src/styles/blocks/day.scss
@@ -8,7 +8,7 @@
   border: 1px solid #000;
 
   @for $index from 1 through 31 {
-    &--#{$index}::before {
+    &:nth-child(#{$index})::before {
       content: "#{$index}";
     }
   }
