--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -6,15 +6,13 @@
   max-width: 7*$square-size + 2*$calendar-padding + 6*$square-gap;
 
   @each $day, $number in $days {
-    &--start-day--#{$day} {
-      .day--1 {
-        margin-left: $number * $square-size + $number * $square-gap;
-      }
+    &--start-day--#{$day} :first-child {
+      margin-left: $number * $square-size + $number * $square-gap;
     }
   }
 
   @for $last-day from 28 through 31 {
-    &--month-length--#{$last-day} :nth-child(n + #{$last-day}) {
+    &--month-length--#{$last-day} :nth-child(n+#{$last-day +1}) {
       display: none;
     }
   }
